--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
 
 </head>
 
+    <header>
+        <nav>
+        <img class="logo" src="https://github.com/LambdaSchool/Sprint-Challenge--User-Interface/blob/master/img/lambda-black.png?raw=true" alt="lambda-black">
+        <a href="index.html">Home</a>
+        <a href="#">About</a>
+        <a href="#">Products</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+        
+        </nav>
+    </header>
+
+
 <body>
     <div class="container">
    
